--- a/templates/datarobot-securitygroup-template.yaml
+++ b/templates/datarobot-securitygroup-template.yaml
@@ -45,15 +45,15 @@ Resources:
         - IpProtocol: tcp
           FromPort: 22
           ToPort: 22
-          CidrIp: 0.0.0.0/0
+          CidrIp: !Ref CidrBlock
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
-          CidrIp: 0.0.0.0/0
+          CidrIp: !Ref CidrBlock
         - IpProtocol: tcp
           FromPort: 443
           ToPort: 443
-          CidrIp: 0.0.0.0/0          
+          CidrIp: !Ref CidrBlock          
         
 ### Required DataRobot ports
         - Description: Application Web
