--- a/templates/datarobot-deployvpc-entry.yaml
+++ b/templates/datarobot-deployvpc-entry.yaml
@@ -41,10 +41,12 @@ Metadata:
       - BastionAMIOS
       - BastionInstanceType
     - Label:
-        default: DataRobot S3 Install Bucket
+        default: DataRobot Install Parameters 
         Parameters:
           - DRS3InstallationBucket
           - DRS3CreateBucket
+          - DRSignedURL
+          - DRHTTPSetting
     - Label:
         default: AWS Quick Start configuration
       Parameters:
@@ -58,6 +60,10 @@ Metadata:
         default: Bastion AMI operating system
       BastionInstanceType:
         default: Bastion instance type
+      DRHTTPSetting:
+        default: Select HTTPS for secure access, HTTP for port 80 insecure access for web layers
+      DRSignedURL:
+        default: Signed URL Provided from email set by web form  
       KeyPairName:
         default: Key pair name
       PrivateSubnet1CIDR:
@@ -110,6 +116,13 @@ Parameters:
     Default: t2.micro
     Description: Amazon EC2 instance type for the bastion instances.
     Type: String
+  DRHTTPSetting:
+    AllowedValues:
+      - 'HTTPS'
+      - 'HTTP'
+    Default: 'HTTPS'
+    Description: Select HTTPS for secured access with certificate, or (not recommended) http for insecure port 80 access
+    Type: String
   DRS3InstallationBucket:
     Default: weswagner-oregon-qs
     Description:
@@ -124,6 +137,10 @@ Parameters:
       - "True"
     Description: Choose True if you did not already create a bucket and want it to be created by the quickstart
     Type: String
+  DRSignedURL:
+    Default: "https://datarobot-enterprise-releases.s3.amazonaws.com/promoted/7.0.2/dockerized/DataRobot-RELEASE-7.0.2.tar.gz?AWSAccessKeyId=AKIAQ6I23A22NIXIMKVW&Expires=1623696772&Signature=XiZexQeWjCwtw%2Fru4XUIFkoHE94%3D"
+    Type: String
+    Description: Presigned URL to download software, must be sent by DataRobot
   KeyPairName:
     Description: Name of an existing public/private key pair, which allows you
       to securely connect to your instance after it launches.
@@ -196,11 +213,11 @@ Resources:
   VPCStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/submodules/quickstart-aws-vpc/templates/aws-vpc.template.yaml
-      #TemplateURL: !Sub
-      #  - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}submodules/quickstart-aws-vpc/templates/aws-vpc.template.yaml'
-      #  - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
-      #    S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+      # TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/submodules/quickstart-aws-vpc/templates/aws-vpc.template.yaml
+      TemplateURL: !Sub
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/quickstart-aws-vpc/templates/aws-vpc.template.yaml'
+        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         AvailabilityZones:
           Fn::Join:
@@ -220,17 +237,17 @@ Resources:
   BastionStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/submodules/quickstart-linux-bastion/templates/linux-bastion.template
-      #TemplateURL: !Sub
-      #  - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}submodules/quickstart-linux-bastion/templates/linux-bastion.template'
-      #  - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
-      #    S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+      # TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/quickstart-data-robot-automl-platform/submodules/quickstart-linux-bastion/templates/linux-bastion.template
+      TemplateURL: !Sub
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/quickstart-linux-bastion/templates/linux-bastion.template'
+        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         QSS3BucketName: 
           Ref: QSS3BucketName
         QSS3BucketRegion: 
           Ref: QSS3BucketRegion
-        QSS3KeyPrefix: !Sub '${QSS3KeyPrefix}submodules/quickstart-linux-bastion/'
+        QSS3KeyPrefix: !Sub 'quickstart-linux-bastion/'
         BastionAMIOS:
           Ref: BastionAMIOS
         BastionHostName: 'DRBastion'
@@ -280,10 +297,14 @@ Resources:
           Fn::GetAtt:
           - VPCStack
           - Outputs.PublicSubnet2ID
+        DRHTTPSetting:
+          Ref: DRHTTPSetting
         DRS3InstallationBucket:
           Ref: DRS3InstallationBucket
         DRS3CreateBucket:
           Ref: DRS3CreateBucket
+        DRSignedURL:
+          Ref: DRSignedURL
         QSS3BucketName:
           Ref: QSS3BucketName
         QSS3BucketRegion: 
